更新questionnaire接口
